style.css
body {
    max-width: max-content;
    margin:auto;
    }

#body {
    max-width: 1080px;
    min-width: 550px;
    padding-bottom: 10px;
    width: fit-content;
    border-color: grey;
    border-style: solid;
    margin-top: 20px;
    margin-bottom: 20px;
    padding-left: 10px;
}
#title {
    padding-left: 5px;
    border-top-style: solid;
}

#menubar {
    border-bottom-style: solid;
    border-left-style: solid;
    border-right-style: solid;
    border-width: 1px;
    border-color: black;
    padding-top: 0px;
    padding-left: 2px;
    padding-right: 2px;
    padding-bottom: 3px;

    text-align: center;
    margin: auto;
    width: fit-content;
}
.sortable {
    margin: 0 auto;
    padding: 10px;
  }
.sortable td {
    padding: 5px;
    outline: solid 0.5px;
}
.blogpost-text{
    text-align: justify;
}
.blogpost {
    padding-left: 10px;
    padding-right: 10px;
}

.content{
    padding-left: 5px;
    padding-right: 5px;
}

#support {
    border-style: solid;
    border-color: black;
    text-align: center;
    width: fit-content;
    margin-top: 20px;
    padding-top: 5px;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 2px;
    max-width: max-content;
    margin:auto;
}
code {

    margin-top: 15px;
    margin-bottom: 15px;
	padding: 10px;
	background-color: #141414;
	color: white;
	display: block;
    border-radius: 10px;
	text-shadow: 5px 5px 5px black, -2px -2px 2px #212121;
}

